--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/node": "^20.5.2",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
